<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:orientation="vertical"
        android:paddingHorizontal="40dp"
        tools:context=".FragmentPacking">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="vertical">

                <!-- Media -->

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_item_form_title"
                    android:background="?colorSecondary"
                    android:textColor="@color/black"
                    android:padding="10dp"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_item_item_select_hint"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginBottom="5dp"
                        android:labelFor="@+id/item_type_autocomplete"
                        app:layout_constraintTop_toTopOf="parent">

                        <AutoCompleteTextView
                            android:id="@+id/item_type_autocomplete"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:inputType="none"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginBottom="5dp"
                        android:layout_height="match_parent">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:id="@+id/width_text_input_layout"
                            android:layout_width="0dp"
                            android:layout_weight="10"
                            android:layout_height="wrap_content"
                            android:hint="@string/add_item_width_input_hint"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:endIconMode="custom"
                            app:errorEnabled="true"
                            app:endIconDrawable="@drawable/width_icon"
                            app:endIconContentDescription="Width icon"
                            app:layout_constraintTop_toTopOf="parent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/width_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/add_item_width_default_value"
                                android:inputType="numberDecimal"
                                />


                        </com.google.android.material.textfield.TextInputLayout>

                        <View
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"/>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:id="@+id/height_text_input_layout"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="10"
                            android:hint="@string/add_item_height_input_hint"
                            app:endIconMode="custom"
                            app:endIconDrawable="@drawable/height_icon"
                            app:endIconContentDescription="Height icon"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:errorEnabled="true"
                            app:layout_constraintTop_toTopOf="parent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/height_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/add_item_height_default_value"
                                android:inputType="numberDecimal"
                                />


                        </com.google.android.material.textfield.TextInputLayout>


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="20dp"
                        android:layout_marginBottom="5dp"
                        android:gravity="center_horizontal|center_vertical"
                        >

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/subtract_item_count_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4sp"
                            android:layout_weight="1"
                            android:contentDescription="@string/add_item_subtract_btn_content_description"
                            app:srcCompat="@drawable/subtract_icon"/>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="0dp"
                            android:layout_weight="50"
                            android:layout_height="match_parent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/item_count_text_edit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical|center_horizontal"
                                android:text="@string/add_item_item_count_default_value"
                                android:inputType="number"
                                />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/add_item_count_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4sp"
                            android:layout_weight="1"
                            android:contentDescription="@string/add_item_add_item_count_button_content_description"
                            app:srcCompat="@drawable/add_icon"/>

                    </LinearLayout>

                </LinearLayout>

                <!-- Buttons -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/add_item_submit_clear_btn"
                        style="@style/Widget.MaterialComponents.FloatingActionButton"
                        android:layout_width="wrap_content"
                        android:layout_weight="5"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/add_item_clear_btn_text"
                        />
                    <View android:layout_weight="1" android:layout_width="0dp" android:layout_height="match_parent" />
                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.FloatingActionButton"
                        android:id="@+id/add_item_submit_add_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="5"
                        android:textColor="@color/black"
                        android:text="@string/add_item_submit_add_btn_text"
                        />
                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/loader"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:gravity="center_horizontal|center_vertical"
            android:layout_height="wrap_content">
            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:indeterminate="true" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/result_layout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            style="@style/truck_button"
            android:background="@drawable/result_layout_background"
            android:visibility="gone"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/sum_total_txt"
        style="@style/sum_total_txt"/>

    <Button
        android:id="@+id/truck_button"
        style="@style/truck_button"
        android:text="@string/go_to_finish_page_txt"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:gravity="left|center_vertical"
        />
</LinearLayout>